// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormHandler/> internal callbacks ::onChange should mutate state field [::config] and set [::value] for relevant field from payload 1`] = `
Array [
  Object {
    "isCollapsed": false,
    "items": Array [
      Object {
        "c": [Function],
        "value": "{{value}}",
      },
      Object {
        "c": [Function],
      },
    ],
    "title": "props.config[0].title",
  },
]
`;

exports[`<FormHandler/> render with default/required props 1`] = `
<DocumentFragment>
  <form
    class="form "
  >
    <section
      class="accordion "
    >
      <h2
        class="accordion_title"
        data-cy="section-0"
        data-section="0"
      >
        props.config[0].title
      </h2>
      <input
        data-cy="section-0-input-0"
        data-field="0"
        data-section="0"
      />
    </section>
    <div
      class="form_controls"
    >
      <button
        class="button "
        data-cy="form-action-submit"
        disabled=""
      >
        submitCTRL.label
      </button>
      <button
        class="button "
        data-cy="form-action-cancel"
      >
        cancelCTRL.cancel
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<FormHandler/> render with optional/required props 1`] = `
<DocumentFragment>
  <form
    class="form optProps.className"
  >
    <h1
      class="form_title"
      data-cy="optProps.data-cyform-title"
    >
      optProps.title
    </h1>
    <section
      class="accordion "
    >
      <h2
        class="accordion_title"
        data-cy="optProps.data-cysection-0"
        data-section="0"
      >
        props.config[0].title
      </h2>
      <input
        data-cy="optProps.data-cysection-0-input-0"
        data-field="0"
        data-section="0"
      />
    </section>
    <div
      class="form_controls"
    >
      <button
        class="button "
        data-cy="optProps.data-cyform-action-update"
        disabled=""
      >
        updateCTRL.label
      </button>
      <button
        class="button "
        data-cy="optProps.data-cyform-action-cancel"
      >
        cancelCTRL.cancel
      </button>
    </div>
  </form>
</DocumentFragment>
`;
